--- a/CSS/jumbotron.css
+++ b/CSS/jumbotron.css
@@ -1,4 +1,10 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
+
 body {
-  padding-top: 3.5rem;
+    padding-top: 3.5rem;
+}
+
+.jumbotron {
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
