fit css to card title

--- a/CSS/BoardView-Body.css
+++ b/CSS/BoardView-Body.css
@@ -23,7 +23,6 @@
 
 .card-header:hover {
     background-color: #669999;
-    cursor: pointer;
 }
 
 .card-header:hover .btn {
@@ -35,6 +34,10 @@
 .card-Title button {
     float: right;
     padding: 0%;
+}
+
+.card-Title:hover {
+    cursor: pointer;
 }
 
 .list-group-item:hover {
